<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PizzaTime</string>
    <string name="personal_size">Personal \n ( 4 slices ) </string>
    <string name="medium_size">Medium \n ( 8 slices ) </string>
    <string name="large_size">Large \n ( 10 slices ) </string>
    <string name="text_pizza_size">Choose your pizza size :</string>
    <string name="txt_pizza_topping">Choose your toppings :</string>
    <string name="txt_extra_topping">Extra toppings :</string>
    <string name="txt_topping_rules"><small>*you can choose up to 4 <b>free</b> toppings for 1 pizza</small></string>
    <string name="btn_order">Submit Order</string>
    <string name="topping1">Mushroom</string>
    <string name="topping2">Pepperoni</string>
    <string name="topping3">Extra Cheese</string>
    <string name="topping4">Sausage</string>
    <string name="topping5">Black Olives</string>
    <string name="topping6">Onion</string>
    <string name="topping7">Green Pepper</string>
    <string name="topping8">Fresh Basil</string>
    <string name="topping9">Fresh Garlic</string>
    <string name="order_text_1">Pesananmu sedang dibuat !!</string>
    <string name="order_text_2">Prepare your tummy, because your order will ready in :</string>
    <string name="ex3">3</string>
    <string name="ex4">4</string>
    <string name="ex5">5</string>
    <string name="ex33">33</string>
    <string name="ex34">34</string>
    <string name="ex35">35</string>
    <string name="ex36">36</string>
    <string name="ex37">37</string>
    <string name="txt_sub_total">Sub Total :</string>
    <string name="price_tag">Rp. XXX ,-</string>
    <string name="top_name">Toppings Name</string>
    <string name="extra_top">Extra Toppings :</string>
    <string name="total">Total</string>
    <string name="est_text">EST</string>
    <string name="est_time">00:00:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">You are one way closer to Pizza, please choose Login or Sign Up</string>
    <string name="login_desc_text">Welcome back, our pizza are waiting for you</string>
    <string name="signup_desc_text">Simply fill this form and you are ready to order</string>
    <string name="lihat_order"><u><b>Lihat Detail Order</b></u></string>
    <string name="welcome">Welcome</string>
    <string name="logo_app_desc">Logo App</string>
    <string name="signin_text">Sign In</string>
    <string name="signup_text">Sign Up</string>
    <string name="image_back_desc">Image back desc</string>
    <string name="username_hint">Input Username</string>
    <string name="password_hint">Input Password</string>
    <string name="nama_user_hint">Input Nama</string>
    <string name="telp_user_hint">Input No Telp</string>
    <string name="password_konfirm_hint">Konfirmasi Password</string>
    <string name="show_password_text">Show Password</string>
    <string name="addlocation_text">Add Location</string>
    <string name="addlocation_desc_text">place text here</string>
    <string name="nama_penerima_text">Nama Penerima</string>
    <string name="penerima_lokasi_hint">Nama Penerima</string>
    <string name="nomor_telp_text">Nomor Telp</string>
    <string name="telepon_lokasi_hint">Nomor Telepon</string>
    <string name="tipe_alamat_text">Tipe Alamat</string>
    <string name="rumah_text">Rumah</string>
    <string name="kantor_text">Kantor</string>
    <string name="kos_text">Kos</string>
    <string name="apartemen_text">Apartemen</string>
    <string name="kota_kodepos_text"><![CDATA[Kota & Kode Pos]]></string>
    <string name="kota_lokasi_hint">Kota</string>
    <string name="kodepos_lokasi_hint">Kode Pos</string>
    <string name="alamat_lengkap_text">Alamat Lengkap</string>
    <string name="alamat_lokasi_hint">Alamat Lengkap</string>
    <string name="simpan_text">Simpan</string>
    <string name="lewati_text">Lewati</string>
    <string name="semua_promo_text">Semua Promo</string>
    <string name="greetings_text">Hi, </string>
    <string name="image_lokasi_desc">Image lokasi desc</string>
    <string name="image_profil_desc">Image profil desc</string>
    <string name="mainmenu_text">Main Menu</string>
    <string name="listmenu_text">List Menu</string>
    <string name="image_menu_desc">Image menu desc</string>
    <string name="image_custom_desc">Image custom desc</string>
    <string name="custom_pizza_text">Custom Pizza</string>

    <string-array name="spinnerListMenu">
        <item><b>All</b></item>
        <item><b>Pizza</b></item>
        <item><b>Drink</b></item>
        <item><b>Side Dish</b></item>
    </string-array>
    <string-array name="spinnerListAlamat">
        <item><b>All</b></item>
        <item><b>Apartemen</b></item>
        <item><b>Kantor</b></item>
        <item><b>Kos</b></item>
        <item><b>Rumah</b></item>
    </string-array>
</resources>
