<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="3dp"
    android:layout_marginBottom="20dp"
    tools:context=".View.Ui.Fragment.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawableEnd="@drawable/ic_person_not_white"
                android:background="@drawable/bg_edit_text_normal"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edtNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawableEnd="@drawable/ic_person_not_white"
                android:background="@drawable/bg_edit_text_normal"
                android:hint="@string/nama_user_hint"
                android:inputType="textPersonName"
                android:layout_marginBottom="20dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edtTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawableEnd="@drawable/ic_phone"
                android:background="@drawable/bg_edit_text_normal"
                android:hint="@string/telp_user_hint"
                android:inputType="phone"
                android:layout_marginBottom="20dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawableEnd="@drawable/ic_lock"
                android:background="@drawable/bg_edit_text_normal"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:layout_marginBottom="20dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edtKonfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:drawableEnd="@drawable/ic_lock"
                android:background="@drawable/bg_edit_text_normal"
                android:hint="@string/password_konfirm_hint"
                android:inputType="textPassword"
                android:autofillHints="" />

            <CheckBox
                android:id="@+id/cbPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/show_password_text"
                android:layout_marginBottom="20dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnRegist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/orange_500"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/signup_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>